<resources>
    <string name="app_name">Alphatram Technologies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand">Brand</string>
    <string name="model_number">Model Number</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="thickness">Thickness</string>
    <string name="add">Add</string>
</resources>
