<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_margin="20dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_text_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_text_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model_number" />
    </android.support.design.widget.TextInputLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33">
                <EditText
                    android:id="@+id/edit_text_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_width"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.34">>
                <EditText
                    android:id="@+id/edit_text_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/width"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_thickness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33">>
                <EditText
                    android:id="@+id/edit_text_thickness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/thickness"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        <Button android:id="@+id/btn_add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>
